Tests/123456789 123456789 123456789 123456789.cs
//using System.Diagnostics;
//using System.Linq;

//namespace Moo;
class Class1
{
	void Mk()
	{
		//string s = "ff";
	}
}

//namespace Noo; //error
//namespace Moo.Noo; //error
//namespace Noo {} //error
//namespace Moo.Noo {} //error
